# app/src/main/assets/api/swagger.json
@@ -402,6 +402,15 @@
             "description": "Present only when `includeContent=true` and the message type is data.",
             "type": "object"
           },
+          "mmsMessage": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/smsgateway.MmsMessage"
+              }
+            ],
+            "description": "Present only when `includeContent=true` and the message type is mms.",
+            "type": "object"
+          },
           "deviceId": {
             "description": "Device ID",
             "example": "PyDmBQZZXYmyxMwED8Fzy",
@@ -944,6 +953,15 @@
               }
             ],
             "description": "Present only when `includeContent=true` and the message type is data.",
+            "type": "object"
+          },
+          "mmsMessage": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/smsgateway.MmsMessage"
+              }
+            ],
+            "description": "Present only when `includeContent=true` and the message type is mms.",
             "type": "object"
           },
           "deviceId": {
