# app/src/main/java/me/capcom/smsgateway/modules/localserver/routes/MessagesRoutes.kt
@@ -21,6 +21,7 @@ import me.capcom.smsgateway.modules.localserver.auth.AuthScopes
 import me.capcom.smsgateway.modules.localserver.auth.requireScope
 import me.capcom.smsgateway.modules.localserver.domain.InboxRefreshRequest
 import me.capcom.smsgateway.modules.localserver.domain.messages.DataMessage
+import me.capcom.smsgateway.modules.localserver.domain.messages.MmsMessage
 import me.capcom.smsgateway.modules.localserver.domain.messages.PostMessageRequest
 import me.capcom.smsgateway.modules.localserver.domain.messages.TextMessage
 import me.capcom.smsgateway.modules.messages.MessagesService
@@ -276,6 +277,23 @@ class MessagesRoutes(
                     DataMessage(
                         data = it.data,
                         port = it.port.toInt()
+                    )
+                }
+
+                else -> null
+            },
+            mmsMessage = when (includeContent) {
+                true -> message.mmsContent?.let { mms ->
+                    MmsMessage(
+                        subject = mms.subject,
+                        text = mms.text,
+                        attachments = mms.parts.map {
+                            MmsMessage.Attachment(
+                                contentType = it.contentType,
+                                name = it.name,
+                                data = it.data,
+                            )
+                        }
                     )
                 }
 
